--- a/Paginas aletorios que fiz/Longin1/estilologin.css
+++ b/Paginas aletorios que fiz/Longin1/estilologin.css
@@ -22,8 +22,53 @@ body {
 /* obs o conteiner e o propprio main de defini */
 {
     width: 420px;
+    background-color: transparent;
     border: 2px solid rgba(255, 255, 255, .2);
     border-radius: 10px;
     color: #fff;
     padding: 30px 40px;
+    box-shadow: 0 0 10px rgba(0,0,0, .2);
+}
+
+.container > h1 {
+    font-size: 36px;
+    text-align: center;
+}
+
+.input-box input{
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    border: 2px solid  rgba(255, 255, 255, .2);     border-radius: 40px;
+    outline:none;
+    /* // isso é horribel aprenda a colocar esse treco acima */
+    font-size: 20px;
+    padding: 20px 45px 20px 20px;
+    color:#fff;
+
+}
+
+.input-box input::placeholder {
+    color: #fff;
+    /* // ta aconcendo que pegamos o input pelo id dele e adicionamos um :: elemento placeholder */
+}
+
+.input-box i {
+    position: absolute;
+    right: 20px;
+    /* // nessesdois acima to colocar o icone como posição absolutra, ouseja indepente dp restp a direita 20px */
+    transform:translateY(-50%);
+   
+    font-size:20px;
+
+   
+    top:50%;
+    /* // aqui estamos dizendo que a imagem começa no 50% da pagina, mas ta errado viu? */
+
+    /* Então a melhor abordagem é:  */
+
+  
+    /* nos mudamos o eixo Y em 50 e ai alinhamos */
+
+    
 }
