--- a/Paginas aletorios que fiz/Longin1/estilologin.css
+++ b/Paginas aletorios que fiz/Longin1/estilologin.css
@@ -28,14 +28,18 @@ body {
     color: #fff;
     padding: 30px 40px;
     box-shadow: 0 0 10px rgba(0,0,0, .2);
+    backdrop-filter:blur(20px); 
+
 }
 
-.container > h1 {
-    font-size: 36px;
+ h1 {
+    font-size: 40px;
     text-align: center;
+    padding-bottom: 20px;
 }
 
 .input-box input{
+     /* // na classe input box, pega o elemento q falei */
     width: 100%;
     height: 100%;
     background-color: transparent;
@@ -49,6 +53,7 @@ body {
 }
 
 .input-box input::placeholder {
+   
     color: #fff;
     /* // ta aconcendo que pegamos o input pelo id dele e adicionamos um :: elemento placeholder */
 }
@@ -71,4 +76,48 @@ body {
     /* nos mudamos o eixo Y em 50 e ai alinhamos */
 
     
+}
+
+.remember-forgot{
+    /* aqui to aplicado para a classe toda */
+    display: flex;
+    justify-content: space-between;
+    /* essespace joga cada um para extremidade do negocio */
+
+    margin:-15px 0 15px;
+
+
+}
+.remember-forgot label input {
+    /* agr sium especificoo */
+    accent-color: #fff;
+    /* fundo da caixa do botão */
+
+}
+
+.remember-forgot a {
+    text-decoration: none;
+    color: #fff;
+
+}
+
+.remember-forgot a:hover {
+    text-decoration: underline;
+
+
+}
+
+.login:hover {
+    /* // no login estamos adcionando esse elemtnoq fará isso */
+    background: transparent;
+    border: 2px solid rgba(255, 255, 255, .2);
+    color: #fff;
+    transition: 0.5;
+}
+
+.register-link{
+    font-size:14px ;
+    text-align: center;
+    margin: 20px 0 15px;
+
 }
