--- a/Paginas aletorios que fiz/login1teste/estilo.css
+++ b/Paginas aletorios que fiz/login1teste/estilo.css
@@ -28,6 +28,7 @@ main {
 
     background-color:transparent ;
     backdrop-filter: blur(4px);
+    border-radius: 20px;
 
     height: 200px;
     width: 420px;
@@ -63,11 +64,16 @@ h1 {
     border-color: #dad4d4;
     background-color:transparent ;
     outline:none;
+    /* box-shadow: rgba(5, 146, 151, 0.904) 0px 5px; */
+    box-shadow:  rgba(0, 1, 2, 0.219) 5px 5px 5px 5px;
+
+    /* é possivel deixar a sombra meio transparente se vc colocar ela preta e ainda adicionar varias camadas */
     
-   
+    
     padding: 10px 10px 10px 20px;
     margin: 2px;
     margin-left: 15px;
+    margin-bottom: 10px;
 
     width: 100%;
     height: 100%;
