--- a/Portifolio ProgramaçãoWEB/style.css
+++ b/Portifolio ProgramaçãoWEB/style.css
@@ -6,8 +6,13 @@
 }
 
 body {
-    background-image:linear-gradient(to bottom, rgb(25, 25, 155), rgb(2, 2, 158));
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background-image:linear-gradient(to bottom, rgba(2, 2, 158, 0.753), rgb(18, 18, 112));
     background-repeat: no-repeat;
+
 
     width: 100vh;
     height: 100vh;
